--- a/index.html
+++ b/index.html
@@ -16,58 +16,58 @@
 
   <div class="search">Search the table</div>
   
-    <table>
+    <table border=""1>
     <tr>
-      <th>ID</th>
-      <th>NAME</th>
-      <th>Email</th>
-      <th>Mobile</th>
-      <th>Adress</th>
+      <th scope="col">ID</th>
+      <th scope="col">NAME</th>
+      <th scope="col">Email</th>
+      <th scope="col">Mobile</th>
+      <th scope="col">Adress</th>
     </tr>
     <tr>
-      <th>01</th>
+      <th scope="row">01</th>
       <td>Bernard Holt</td>
       <td>bernard.holt@example.com</td>
       <td>(345)-297-1293</td>
       <td>8285 Wycliff Ave</td>
     </tr>
     <tr>
-      <th>02</th>
+      <th scope="row">02</th>
       <td>Brittany Woods</td>
       <td>brittany.woods@example.com</td>
       <td>(485)-388-9180</td>
       <td>7960 Valwood Pkwy</td>
     </tr>
     <tr>
-      <th>03</th>
+      <th scope="row">03</th>
       <td>Tony May</td>
       <td>tony.may@example.com</td>
       <td>(068)-734-8882</td>
       <td></td>
     </tr>
     <tr>
-      <th>04</th>
+      <th scope="row">04</th>
       <td>Devon Morgan</td>
       <td>devon.morgan@example.com</td>
       <td>(686)-170-5335</td>
       <td></td>
     </tr>
     <tr>
-      <th>05</th>
+      <th scope="row">05</th>
       <td>abc</td>
       <td>@g</td>
       <td>123</td>
       <td></td>
     </tr>
     <tr>
-      <th>06</th>
+      <th scope="row">06</th>
       <td></td>
       <td></td>
       <td></td>
       <td></td>
     </tr>
     <tr>
-      <th></th>
+      <th scope="row"></th>
       <td></td>
       <td></td>
       <th>total contacts</th>
