--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
 
   <div class="search">Search the table</div>
   
-    <table border=""1>
-    <tr>
-      <th scope="col">ID</th>
-      <th scope="col">NAME</th>
-      <th scope="col">Email</th>
-      <th scope="col">Mobile</th>
-      <th scope="col">Adress</th>
-    </tr>
+    <table >
+      <thead>
+        <tr>
+          <th scope="col">ID</th>
+          <th scope="col">NAME</th>
+          <th scope="col">Email</th>
+          <th scope="col">Mobile</th>
+          <th scope="col">Adress</th>
+        </tr>
+      </thead>
+    <tbody>
     <tr>
       <th scope="row">01</th>
       <td>Bernard Holt</td>
@@ -66,12 +69,14 @@
       <td></td>
       <td></td>
     </tr>
+  </tbody>
+  <tfoot>
     <tr>
      
       <th scope="row" colspan="4">Total Contacts</th>
       <td>5</td>
     </tr>
-    
+  </tfoot>
   
 
 
